Fixed Bug #36602: persistent connections don't work with MySQL 5.0.3+. Fixed PECL Bug #6262; correctly fallback to emulated statements when the server version is too old.

Also include code to default to using emulated prepared statements, as these
can take advantage of the query cache.  Since it's a bit late in the release
process to spring this on the masses, the default has not been changed.  The
code is included so that it doesn't get lost.